# Elyuf

./: .gitignore  .profile  Dockerfile  Procfile  README.md  data.py  docker-compose.yml  elyufbot.py  handlers.py  main.py  pyproject.toml  registered_users.pkl  requirements.txt  setup.py  user_database.py
data/: count.py  init-QS.json  init-Times.json  init-US&NEWS.json
rag/: database.py  embed-documents.py  mongodb_database.py  query_util.py
telegram_src/: handlers.py
